# langroid-template

./: .gitignore  README.md  justfile  mkdocs.yml  pyproject.toml
docs/: getting-started.md  index.md
example/: main.py
scripts/: customize.py
tests/: test_chat_agent.py
